<resources>
    <string name="app_name">Dogypedia</string>
    <string name="welcome">Welcome to Dogypedia!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log in</string>
    <string name="verify_email">Verify Email</string>
    <string name="loading">Loading…</string>
    <string name="user_logo_desc">User logo</string>
    <string name="user_name_radu">Hello, Radu Candea</string>
    <string name="home_item">Home</string>
    <string name="contact_us_item">Contact us</string>
    <string name="saved_items_item">Saved Items</string>
    <string name="search_breed_text">Search a dog breed:</string>
    <string name="hint_breed">Type breed</string>
    <string name="description_home_string">Find information about well over 100 dog breeds.</string>
    <string name="randomDog_imageDesc">Random Dog</string>
    <string name="search_button_text">Search</string>
    <string name="settings_menu">Settings</string>
    <string name="log_out_menu">Log out</string>
    <string name="background_color_text">Background color:</string>
    <string name="light_grey_text">Light Grey</string>
    <string name="light_blue_text">Light Blue</string>
    <string name="change_home_image_text">Change home image:</string>
    <string name="new_image_text">New Image</string>
    <string name="breed_name_text">Breed name: </string>
    <string name="example_breed_text">Example Breed</string>
    <string name="breed_name_detail_text">Breed Name</string>
    <string name="breed_group_text">Breed Group</string>
    <string name="temperament_text">Temperament:</string>
    <string name="height_text">Height:</string>
    <string name="weight_text">Weight:</string>
    <string name="life_span_text">Life span:</string>
    <string name="dog_image_text">Dog Image.</string>
    <string name="contact_description_text">If you have any suggestions or complaints about the application you can send us an email using the form below.</string>
    <string name="email_text">Email:</string>
    <string name="email_subject_text">Email Subject:</string>
    <string name="email_body_text">Email Body:</string>
    <string name="hint_email_address">Type email address here...</string>
    <string name="hint_email_subject">Type email subject here...</string>
    <string name="hint_email_body">Type email body here...</string>
    <string name="proceed_text">Proceed</string>
</resources>